src/style.css
* { margin: 0; padding: 0; box-sizing: border-box; }

body 
{
    min-height: 100vh;
    background:#ffffff;
    display: flex;
    align-items: center;
    justify-content: center;
}

.win-bg 
{
    display: block;
    margin: 0 auto;
    border-radius: 16px;
    border:#504133 2px solid;
    width: 500px;
    height: 620px;
    object-fit: cover;
}

.toggle-bar
{
    display: flex;
    align-items: center;
    gap: 5px;
    background: #776652;
    border-radius: 0px;
    border: 2px solid #4d3820;
    padding: 4px;
    white-space: nowrap;
}

.toggle-bar button
{
    border: 2px solid transparent;
    background: transparent;
    border-radius: 0px;
    padding: 6px 16px;
    font-family: 'Questrial', sans-serif;
    font-size: 0.9rem;
    color: #f1d9be;
    cursor: pointer;
    transition: background 0.2s, color 0.2s;
}

.toggle-bar button:hover
{
    background: #d4b89627;
    border-radius: 2px;
    border: 2px solid #2e1b0b41;
    /* font-size: 1.0rem; */
}

.toggle-bar button.active
{
    background: #b16b6b; /*#836549*/
    color: #f5e6ce;
    border-color: #834646; /*#2e1b0b*/
}

.win-bg-wrapper
{
    position: relative;
    width: 850px;
    height: 620px;
    border-radius: 9px;
    overflow: hidden;
}

.win-bg-wrapper .win-bg
{
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 9px;
}

.win-bg-wrapper .toggle-bar
{
    position: absolute;
    top: 24px;
    left: 50%;
    transform: translateX(-50%);
}

.snippet-panel
{
    position: absolute;
    top: 100px;
    right: 24px;
    width: 280px;
    bottom: 24px;
    background: #776652;
    border-radius: 0px;
    border: 2px solid #4d3820;
    padding: 6px;
    display: none;
    overflow-y: auto;
}

.snippet-panel.visible
{
    display: block;
}

.snippet-grid
{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 5px;
}

.snippet-grid img
{
    width: 100%;
    aspect-ratio: 1;
    object-fit: cover;
    border-radius: 5px;
    border: 2px solid transparent;
    cursor: pointer;
    transition: background 0.2s, border-color 0.2s;
}

.snippet-grid img:hover
{
    border: 2px solid #2e1b0b41;
    outline: 1px solid #d4b89627;
}

.snippet-grid img.selected
{
    background: #836549;
    border: 2px solid #2e1b0b;
}
.preview-box
{
    position: absolute;
    top: 100px;
    left: 24px;
    width: 380px;
    height: 380px; 
    background: #776652;
    border-radius: 0px;
    border: 2px solid #4d3820;
    /* padding: 6px; */
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

.preview-box img
{
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: none;
}

.preview-box img.visible
{
    display: block;
}

